--- a/.env.local.example
+++ b/.env.local.example
@@ -4,3 +4,5 @@ CLERK_SECRET_KEY=
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 
+POSTGRES_PRISMA_URL=
+POSTGRES_URL_NON_POOLING=
